--- a/index.html
+++ b/index.html
@@ -78,12 +78,14 @@
 	</div><br>
 
 
-	<br><br><br><br>
+	<br>
+	<!-- <br> -->
+	<!-- <br><br> -->
 	
 	<div class="container" style="padding-top: 20px; font-size: 20px">
 		<div align="center">
 		<div class="center">
-			<img class="img-responsive img-rounded" src="imgs/qualitative2.png" style="width:90%; height:100%" alt="">
+			<img class="img-responsive img-rounded" src="imgs/teaser2.gif" style="width:100%; height:100%" alt="">
 		</div>
 		</div>
 	</div><br><br>
