--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
 		<br>
 		<!-- <video width="1150" controls autoplay loop> -->
 
-		<video width="1100" controls poster="imgs/baselines1.jp2">
+		<video width="1100" controls poster="imgs/baselines1.png">
 			<source src="imgs/baselines1-4.mp4" type="video/mp4">
 		</video>	
 		<!-- <img class="center2" src="imgs/baselines1.png" style="width:80%; height:100%;" alt=""> -->
@@ -174,7 +174,7 @@
 
 
 		<div class="center3">
-			<video width="850" controls poster="imgs/baselines2.jp2">
+			<video width="850" controls poster="imgs/baselines2.png">
 				<source src="imgs/baselines2.mp4" type="video/mp4">
 			</video>
 		</div>
@@ -187,7 +187,7 @@
 		<br>
 
 		<div class="center3">
-			<video width="850" controls poster="imgs/baselines3.jp2">
+			<video width="850" controls poster="imgs/baselines3.png">
 				<source src="imgs/baselines3.mp4" type="video/mp4">
 			</video>
 		</div>
