--- a/index.html
+++ b/index.html
@@ -83,9 +83,14 @@
 			<a href="https://www.ekinakyurek.me/">Ekin Akyürek<sup>1</sup></a> &nbsp;&nbsp;&nbsp;&nbsp;
 			<a href="http://web.mit.edu/torralba/www/">Antonio Torralba<sup>1</sup></a> &nbsp;&nbsp;&nbsp;&nbsp;
 			<a href="https://www.mit.edu/~jda/">Jacob Andreas<sup>1</sup></a> &nbsp;&nbsp;&nbsp;&nbsp;
-			<a href="https://scholar.google.com/citations?user=Vzr1RukAAAAJ&hl=en">Igor Mordatch<sup>2</sup></a> <br><br>
-			<a><b><sup>1</sup>MIT CSAIL</b></a> &nbsp;&nbsp;&nbsp;&nbsp;
-			<a><b><sup>2</sup>Google Brain</b></a><br>
+			<a href="https://scholar.google.com/citations?user=Vzr1RukAAAAJ&hl=en">Igor Mordatch<sup>2</sup></a> 
+			<br>
+			<!-- <br> -->
+			<a><sup>1</sup>MIT CSAIL</a> &nbsp;&nbsp;&nbsp;&nbsp;
+			<a><sup>2</sup>Google Brain</a><br>
+			<br>
+			<a href="https://people.csail.mit.edu/lishuang/"><b>Paper</b></a> &nbsp;&nbsp;&nbsp;&nbsp;
+			<a href="https://github.com/ShuangLI59/Language-Model-Pre-training-Improves-Generalization-in-Policy-Learning"><b>Github</b></a><br>
 
 			<!-- <a href="https://www.csail.mit.edu/"><b><sup>1</sup>MIT CSAIL</b></a><br> -->
 			<!-- <small>(* indicate equal contribution)</small> -->
@@ -118,6 +123,40 @@
 	<br><br>
 	
 
+
+
+
+
+	
+	<div class="container">
+		<h3 id="Paper" style="padding-top: 80px; margin-top: -80px;">Paper</h3>
+
+		<div class="row">
+			<div class="col-md-12">
+			<a href="https://people.csail.mit.edu/lishuang/">Shuang Li</a>,
+			<a href="https://people.csail.mit.edu/xavierpuig/">Xavier Puig</a>,
+			<a href="https://yilundu.github.io/">Yilun Du</a>,
+			<a href="https://www.ekinakyurek.me/">Ekin Akyürek</a>,
+			<a href="http://web.mit.edu/torralba/www/">Antonio Torralba</a>,
+			<a href="https://www.mit.edu/~jda/">Jacob Andreas</a>, and
+			<a href="https://scholar.google.com/citations?user=Vzr1RukAAAAJ&hl=en">Igor Mordatch</a><br>
+
+			<b>Language Model Pre-training Improves Generalization in Policy Learning</b><br>
+
+			<b>arxiv 2021</b> 
+			<a href="">[Paper]</a>
+			<a href="https://github.com/ShuangLI59/Language-Model-Pre-training-Improves-Generalization-in-Policy-Learning">[Code]</a>
+			<a href="paper.bib" target="_blank">[BibTex]</a><br>
+
+			</div>
+		</div>
+	</div>
+	<br>
+	<!-- <br> -->
+
+
+
+
 	<!-- <div class="container" style="padding-top: 20px; font-size: 20px"> -->
 	<div class="container">
 		<hr class="my-4">
@@ -141,30 +180,6 @@
 
 
 
-	<!-- 
-	<div class="container">
-		<h3 id="Paper" style="padding-top: 80px; margin-top: -80px;">Paper</h3>
-
-		<div class="row">
-			<div class="col-md-12">
-			<a href="https://people.csail.mit.edu/lishuang/">Shuang Li<sup>1</sup></a>,
-			<a href="https://people.csail.mit.edu/xavierpuig/">Xavier Puig<sup>1</sup></a>,
-			<a href="https://yilundu.github.io/">Yilun Du<sup>1</sup></a>,
-			<a href="https://www.ekinakyurek.me/">Ekin Akyürek<sup>1</sup></a>,
-			<a href="http://web.mit.edu/torralba/www/">Antonio Torralba<sup>1</sup></a>,
-			<a href="https://www.mit.edu/~jda/">Jacob Andreas<sup>1</sup></a>, and
-			<a href="https://scholar.google.com/citations?user=Vzr1RukAAAAJ&hl=en">Igor Mordatch<sup>2</sup></a><br>
-
-			<b>Language Model Pre-training Improves Generalization in Policy Learning</b><br>
-
-			<b>arxiv 2021</b> 
-			<a href="">[Paper]</a>
-			<a href="paper.bib" target="_blank">[BibTex]</a><br>
-
-			</div>
-		</div>
-	</div>
-	<br><br> -->
 
 
 
