--- a/index.html
+++ b/index.html
@@ -37,6 +37,12 @@
   margin-right: auto;
   width: 80%;
 }
+.center4 {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 70%;
+}
 </style>
 
 
@@ -280,9 +286,11 @@
 		The policy learned by fine-tuning the pre-trained language model successfully finishes the task described in the goal predicates. 
 		We highlight the key actions in the map, where the agent is finding, grabbing, or placing objects in the target positions.
 		<br><br><br>
-		<img class="img-responsive img-rounded" src="imgs/teaser1.gif" style="width:100%; height:100%" alt="">
+		<img class="img-responsive img-rounded" src="imgs_new/teaser1.gif" style="width:100%; height:100%" alt="">
 	</div>
 
+
+	<br><br>
 
 
 	<!-- Video -->
@@ -294,39 +302,32 @@
 
 		
 		<div align="left">
-			<h4 style="padding-top: 80px; margin-top: -80px;">1. Policy with pretrained language model vs. Policy without pretrained language model</h4>
+			<h4 style="padding-top: 80px; margin-top: -80px;">1. Policy with pre-trained Language Model v.s. Policy without pre-trained Language Model</h4>
 		  <!-- <div class="embed-responsive embed-responsive-16by9"> -->
 		    <!-- <iframe style="border: 1px solid #000;" class="embed-responsive-item" src="imgs_new/vid1.mp4" frameborder="0" allowfullscreen></iframe> -->
 		  <!-- </div> -->
-		  	<video width="1000" height="500" controls class=center2>
+		  	<video width="800" controls class=center4>
 			  <source src="imgs_new/vid1.mp4" type="video/mp4">
 			</video>
 		</div>
 		<br>
 
 
-
-		<hr class="my-4">
 		<div align="left">
-			<h4 style="padding-top: 80px; margin-top: -80px;">3. Policies with pretrained language model on different test settings</h4>
-		  	<div class="embed-responsive embed-responsive-16by9">
-		    <iframe style="border: 1px solid #000;" class="embed-responsive-item" src="https://www.youtube.com/embed/z3FY8JriGB0" frameborder="0" allowfullscreen></iframe>
-			</div>
+			<h4 style="padding-top: 80px; margin-top: -80px;">2. Policy with pre-trained Language Model v.s. Policy with LSTM</h4>
+		  	<video width="800" controls class=center4>
+			  <source src="imgs_new/vid2.mp4" type="video/mp4">
+			</video>
 		</div>
 		<br>
 
-
-
-		
-
-		<hr class="my-4">
 		<div align="left">
-			<h4 style="padding-top: 80px; margin-top: -80px;">3. Policy with LSTM vs. Policy with pretrained language model</h4>
-		  <div class="embed-responsive embed-responsive-16by9">
-		    <iframe style="border: 1px solid #000;" class="embed-responsive-item" src="https://www.youtube.com/embed/F9XvOAKDkXo" frameborder="0" allowfullscreen></iframe>
-			</div>
-		</div><br><br>
-
+			<h4 style="padding-top: 80px; margin-top: -80px;">3. Policy with pre-trained Language Model on different test settings</h4>
+		  	<video width="800" controls class=center4>
+			  <source src="imgs_new/vid3.mp4" type="video/mp4">
+			</video>
+		</div>
+		<br>
 
 
 	</div>
