--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
 
 	<div class="container">
 		<hr class="my-4">
-		<h3 id="Model" style="padding-top: 80px; margin-top: -80px;">Can pre-trained language models be used as a general framework for tasks across different environment?</h3>
+		<h3 id="Model" style="padding-top: 80px; margin-top: -80px;">Can pre-trained language models be used as a general framework for tasks across different environments?</h3>
 		<br>
 
 		In this paper, we study this question through the lens of <b>embodied decision-making</b>, investigating the effectiveness of LM pre-training as a general framework for learning policies across a variety of environments.
