--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
 			<a><sup>1</sup>MIT CSAIL</a> &nbsp;&nbsp;&nbsp;&nbsp;
 			<a><sup>2</sup>Google Brain</a><br>
 			<br>
-			<a href="https://people.csail.mit.edu/lishuang/"><b>Paper</b></a> &nbsp;&nbsp;&nbsp;&nbsp;
+			<a href="https://arxiv.org/abs/2202.01771"><b>Paper</b></a> &nbsp;&nbsp;&nbsp;&nbsp;
 			<a href="https://github.com/ShuangLI59/Language-Model-Pre-training-Improves-Generalization-in-Policy-Learning"><b>Github</b></a><br>
 
 			<!-- <a href="https://www.csail.mit.edu/"><b><sup>1</sup>MIT CSAIL</b></a><br> -->
@@ -169,9 +169,9 @@
 			<b>Pre-Trained Language Models for Interactive Decision-Making</b><br>
 
 			<b>arxiv 2022</b> 
-			<a href="">[Paper]</a>
+			<a href="https://arxiv.org/abs/2202.01771">[Paper]</a>
 			<a href="https://github.com/ShuangLI59/Pre-Trained-Language-Models-for-Interactive-Decision-Making">[Code]</a>
-			<a href="paper.bib" target="_blank">[BibTex]</a><br>
+			<!-- <a href="paper.bib" target="_blank">[BibTex]</a><br> -->
 
 			</div>
 		</div>
@@ -286,7 +286,7 @@
 		<br><br>
 		
 
-		We find that sequential representations (vs. fixed-dimensional feature vectors) and the LM objective (not just the transformer architecture) are both important for generalization, however, the input encoding schemes (e.g. as a natural language string vs. an arbitrary encoding scheme) has little influence.
+		We find that sequential representations (vs. fixed-dimensional feature vectors) and the LM objective (not just the transformer architecture) are both important for generalization, however, the input encoding schemes (e.g. as a natural language string vs. an arbitrary encoding scheme) have little influence.
 
 	</div>
 
