--- a/index.html
+++ b/index.html
@@ -89,18 +89,28 @@
 				Pre-Trained Language Models for Interactive Decision-Making
 			</h2><br>
 
-			<a href="https://people.csail.mit.edu/lishuang/">Shuang Li<sup>1</sup></a> &nbsp;&nbsp;&nbsp;&nbsp;
-			<a href="https://people.csail.mit.edu/xavierpuig/">Xavier Puig<sup>1</sup></a> &nbsp;&nbsp;&nbsp;&nbsp;
-			<a href="https://yilundu.github.io/">Yilun Du<sup>1</sup></a> &nbsp;&nbsp;&nbsp;&nbsp;
-			<a href="https://clintonjwang.github.io/">Clinton Wang<sup>1</sup></a> &nbsp;&nbsp;&nbsp;&nbsp;
-			<a href="https://www.ekinakyurek.me/">Ekin Akyürek<sup>1</sup></a> &nbsp;&nbsp;&nbsp;&nbsp; <br>
-			<a href="http://web.mit.edu/torralba/www/">Antonio Torralba<sup>1</sup></a> &nbsp;&nbsp;&nbsp;&nbsp;
-			<a href="https://www.mit.edu/~jda/">Jacob Andreas<sup>1</sup></a> &nbsp;&nbsp;&nbsp;&nbsp;
-			<a href="https://scholar.google.com/citations?user=Vzr1RukAAAAJ&hl=en">Igor Mordatch<sup>2</sup></a> 
+			<a href="https://people.csail.mit.edu/lishuang/">Shuang Li<sup>1</sup></a> &nbsp;&nbsp;&nbsp;
+			<a href="https://people.csail.mit.edu/xavierpuig/">Xavier Puig<sup>1</sup></a> &nbsp;&nbsp;&nbsp;
+			<a href="">Chris Paxton<sup>2</sup></a> &nbsp;&nbsp;&nbsp;
+			<a href="https://yilundu.github.io/">Yilun Du<sup>1</sup></a> &nbsp;&nbsp;&nbsp;
+			<a href="https://clintonjwang.github.io/">Clinton Wang<sup>1</sup></a> &nbsp;&nbsp;&nbsp;
+			<a href="">Linxi Fan<sup>2</sup></a> &nbsp;&nbsp;&nbsp;
+			<a href="">Tao Chen<sup>1</sup></a> &nbsp;&nbsp;
+			<a href="">De-An Huang<sup>2</sup></a> &nbsp;&nbsp;
+			<a href="https://www.ekinakyurek.me/">Ekin Akyürek<sup>1</sup></a> <br>
+			<a href="">Anima Anandkumar<sup>2</sup></a> &nbsp;&nbsp;&nbsp;
+			<a href="https://www.mit.edu/~jda/">Jacob Andreas<sup>1</sup></a> &nbsp;&nbsp;&nbsp;
+			<a href="https://scholar.google.com/citations?user=Vzr1RukAAAAJ&hl=en">Igor Mordatch<sup>3</sup></a> &nbsp;&nbsp;&nbsp;
+			<a href="http://web.mit.edu/torralba/www/">Antonio Torralba<sup>1</sup></a> &nbsp;&nbsp;&nbsp;
+			<a href="">Yuke Zhu<sup>2</sup></a> &nbsp;&nbsp;&nbsp; <br>
+			<br>
+			<b>Junior authors are ordered based on their contributions and senior authors are ordered alphabetically</b>
+			<br>
 			<br>
 			<!-- <br> -->
 			<a><sup>1</sup>MIT CSAIL</a> &nbsp;&nbsp;&nbsp;&nbsp;
-			<a><sup>2</sup>Google Brain</a><br>
+			<a><sup>2</sup>Nvidia</a> &nbsp;&nbsp;&nbsp;&nbsp;
+			<a><sup>3</sup>Google Brain</a><br>
 			<br>
 			<a href="https://arxiv.org/abs/2202.01771"><b>Paper</b></a> &nbsp;&nbsp;&nbsp;&nbsp;
 			<a href="https://github.com/ShuangLI59/Language-Model-Pre-training-Improves-Generalization-in-Policy-Learning"><b>Github</b></a><br>
@@ -156,18 +166,26 @@
 
 		<div class="row">
 			<div class="col-md-12">
-			<a href="https://people.csail.mit.edu/lishuang/">Shuang Li</a>,
-			<a href="https://people.csail.mit.edu/xavierpuig/">Xavier Puig</a>,
-			<a href="https://yilundu.github.io/">Yilun Du</a>,
-			<a href="https://clintonjwang.github.io/">Clinton Wang</a>,
-			<a href="https://www.ekinakyurek.me/">Ekin Akyürek</a>,
-			<a href="http://web.mit.edu/torralba/www/">Antonio Torralba</a>,
-			<a href="https://www.mit.edu/~jda/">Jacob Andreas</a>, and
-			<a href="https://scholar.google.com/citations?user=Vzr1RukAAAAJ&hl=en">Igor Mordatch</a><br>
+			<a href="https://people.csail.mit.edu/lishuang/">Shuang Li</a>&nbsp;&nbsp;
+			<a href="https://people.csail.mit.edu/xavierpuig/">Xavier Puig</a>&nbsp;&nbsp;
+			<a href="https://cpaxton.github.io">Chris Paxton</a>&nbsp;&nbsp;
+			<a href="https://yilundu.github.io/">Yilun Du</a>&nbsp;&nbsp;
+			<a href="https://clintonjwang.github.io/">Clinton Wang</a>&nbsp;&nbsp;
+			<a href="https://scholar.google.com/citations?user=sljtWIUAAAAJ&hl=en">Linxi Fan</a>&nbsp;&nbsp;
+			<a href="https://taochenshh.github.io">Tao Chen</a>&nbsp;&nbsp;
+			<a href="https://ai.stanford.edu/~dahuang/">De-An Huang</a>&nbsp;&nbsp;
+			<a href="https://www.ekinakyurek.me/">Ekin Akyürek</a>&nbsp;&nbsp; <br>
+			<a href="http://tensorlab.cms.caltech.edu/users/anima/">Anima Anandkumar</a>&nbsp;&nbsp;
+			<a href="https://www.mit.edu/~jda/">Jacob Andreas</a>&nbsp;&nbsp;
+			<a href="https://scholar.google.com/citations?user=Vzr1RukAAAAJ&hl=en">Igor Mordatch</a> &nbsp;&nbsp;
+			<a href="http://web.mit.edu/torralba/www/">Antonio Torralba</a> &nbsp;&nbsp;
+			<a href="https://www.cs.utexas.edu/~yukez/">Yuke Zhu</a><br>
 
-			<b>Pre-Trained Language Models for Interactive Decision-Making</b><br>
+			<div style="font-size: 16px">*Junior authors are ordered based on their contributions and senior authors are ordered alphabetically</div><br>
 
-			<b>arxiv 2022</b> 
+			<b style="font-size: 20px">Pre-Trained Language Models for Interactive Decision-Making</b><br>
+
+			arxiv 2022 
 			<a href="https://arxiv.org/abs/2202.01771">[Paper]</a>
 			<a href="https://github.com/ShuangLI59/Pre-Trained-Language-Models-for-Interactive-Decision-Making">[Code]</a>
 			<!-- <a href="paper.bib" target="_blank">[BibTex]</a><br> -->
