--- a/index.html
+++ b/index.html
@@ -94,17 +94,17 @@
 			<a href="">Chris Paxton<sup>2</sup></a> &nbsp;&nbsp;&nbsp;
 			<a href="https://yilundu.github.io/">Yilun Du<sup>1</sup></a> &nbsp;&nbsp;&nbsp;
 			<a href="https://clintonjwang.github.io/">Clinton Wang<sup>1</sup></a> &nbsp;&nbsp;&nbsp;
-			<a href="">Linxi Fan<sup>2</sup></a> &nbsp;&nbsp;&nbsp;
-			<a href="">Tao Chen<sup>1</sup></a> &nbsp;&nbsp;
-			<a href="">De-An Huang<sup>2</sup></a> &nbsp;&nbsp;
-			<a href="https://www.ekinakyurek.me/">Ekin Akyürek<sup>1</sup></a> <br>
-			<a href="">Anima Anandkumar<sup>2</sup></a> &nbsp;&nbsp;&nbsp;
-			<a href="https://www.mit.edu/~jda/">Jacob Andreas<sup>1</sup></a> &nbsp;&nbsp;&nbsp;
-			<a href="https://scholar.google.com/citations?user=Vzr1RukAAAAJ&hl=en">Igor Mordatch<sup>3</sup></a> &nbsp;&nbsp;&nbsp;
-			<a href="http://web.mit.edu/torralba/www/">Antonio Torralba<sup>1</sup></a> &nbsp;&nbsp;&nbsp;
-			<a href="">Yuke Zhu<sup>2</sup></a> &nbsp;&nbsp;&nbsp; <br>
+			<a href="">Linxi Fan<sup>2</sup></a> <br>
+			<a href="">Tao Chen<sup>1</sup></a> &nbsp;&nbsp;&nbsp;
+			<a href="">De-An Huang<sup>2</sup></a> &nbsp;&nbsp;&nbsp;
+			<a href="https://www.ekinakyurek.me/">Ekin Akyürek<sup>1</sup></a> &nbsp;&nbsp;&nbsp;
+			<a href="">Anima Anandkumar&dagger;<sup>2</sup></a> &nbsp;&nbsp;&nbsp; <br>
+			<a href="https://www.mit.edu/~jda/">Jacob Andreas&dagger;<sup>1</sup></a> &nbsp;&nbsp;&nbsp;
+			<a href="https://scholar.google.com/citations?user=Vzr1RukAAAAJ&hl=en">Igor Mordatch&dagger;<sup>3</sup></a> &nbsp;&nbsp;&nbsp;
+			<a href="http://web.mit.edu/torralba/www/">Antonio Torralba&dagger;<sup>1</sup></a> &nbsp;&nbsp;&nbsp;
+			<a href="">Yuke Zhu&dagger;<sup>2</sup></a> &nbsp;&nbsp;&nbsp; <br>
 			<br>
-			<b>Junior authors are ordered based on their contributions and senior authors are ordered alphabetically</b>
+			<b>Junior authors are ordered based on their contributions and senior authors&dagger; are ordered alphabetically</b>
 			<br>
 			<br>
 			<!-- <br> -->
@@ -175,13 +175,13 @@
 			<a href="https://taochenshh.github.io">Tao Chen</a>&nbsp;&nbsp;
 			<a href="https://ai.stanford.edu/~dahuang/">De-An Huang</a>&nbsp;&nbsp;
 			<a href="https://www.ekinakyurek.me/">Ekin Akyürek</a>&nbsp;&nbsp; <br>
-			<a href="http://tensorlab.cms.caltech.edu/users/anima/">Anima Anandkumar</a>&nbsp;&nbsp;
-			<a href="https://www.mit.edu/~jda/">Jacob Andreas</a>&nbsp;&nbsp;
-			<a href="https://scholar.google.com/citations?user=Vzr1RukAAAAJ&hl=en">Igor Mordatch</a> &nbsp;&nbsp;
-			<a href="http://web.mit.edu/torralba/www/">Antonio Torralba</a> &nbsp;&nbsp;
-			<a href="https://www.cs.utexas.edu/~yukez/">Yuke Zhu</a><br>
+			<a href="http://tensorlab.cms.caltech.edu/users/anima/">Anima Anandkumar&dagger;</a>&nbsp;&nbsp;
+			<a href="https://www.mit.edu/~jda/">Jacob Andreas&dagger;</a>&nbsp;&nbsp;
+			<a href="https://scholar.google.com/citations?user=Vzr1RukAAAAJ&hl=en">Igor Mordatch&dagger;</a> &nbsp;&nbsp;
+			<a href="http://web.mit.edu/torralba/www/">Antonio Torralba&dagger;</a> &nbsp;&nbsp;
+			<a href="https://www.cs.utexas.edu/~yukez/">Yuke Zhu&dagger;</a><br>
 
-			<div style="font-size: 16px">*Junior authors are ordered based on their contributions and senior authors are ordered alphabetically</div><br>
+			<div style="font-size: 16px">*Junior authors are ordered based on their contributions and senior authors&dagger; are ordered alphabetically</div><br>
 
 			<b style="font-size: 20px">Pre-Trained Language Models for Interactive Decision-Making</b><br>
 
