--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
 			<a><sup>2</sup>Nvidia</a> &nbsp;&nbsp;&nbsp;&nbsp;
 			<a><sup>3</sup>Google Brain</a><br>
 			<br>
-			<a href="https://arxiv.org/abs/2202.01771"><b>Paper</b></a> &nbsp;&nbsp;&nbsp;&nbsp;
+			<a href="https://arxiv.org/abs/2202.01771"><b>NeurIPS 2022</b></a> &nbsp;&nbsp;&nbsp;&nbsp;
 			<a href="https://github.com/ShuangLI59/Language-Model-Pre-training-Improves-Generalization-in-Policy-Learning"><b>Github</b></a><br>
 
 			<!-- <a href="https://www.csail.mit.edu/"><b><sup>1</sup>MIT CSAIL</b></a><br> -->
@@ -168,10 +168,7 @@
 	
 
 
-
-
-
-	
+<!-- 
 	<div class="container">
 		<hr class="my-4">
 		<h3 id="Paper" style="padding-top: 80px; margin-top: -80px;">Paper</h3>
@@ -200,13 +197,14 @@
 			arxiv 2022 
 			<a href="https://arxiv.org/abs/2202.01771">[Paper]</a>
 			<a href="https://github.com/ShuangLI59/Pre-Trained-Language-Models-for-Interactive-Decision-Making">[Code]</a>
-			<!-- <a href="paper.bib" target="_blank">[BibTex]</a><br> -->
 
 			</div>
 		</div>
 	</div>
 	<br>
 	<br>
+
+	 -->
 
 	<div class="container">
 		<hr class="my-4">
