--- a/index.html
+++ b/index.html
@@ -82,9 +82,9 @@
 				<li class="nav-item">
 					<a class="nav-link" href="#Abstract">Abstract</a>
 				</li>
-				<li class="nav-item">
+				<!-- <li class="nav-item">
 					<a class="nav-link" href="#Paper">Paper</a>
-				</li>
+				</li> -->
 				<li class="nav-item">
 					<a class="nav-link" href="#Model">Model</a>
 				</li>
@@ -208,7 +208,7 @@
 
 	<div class="container">
 		<hr class="my-4">
-		<h3 id="results" style="padding-top: 80px; margin-top: -80px;">More results</h3>
+		<h3 id="results" style="padding-top: 80px; margin-top: -80px;">Example results</h3>
 		<br>
 
 		<b>Qualitative results of our model on VirtualHome and BabyAI.</b> We only show a sub-trajectory in each example to save space. The interacted objects are labelled by green bounding boxes.
