--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
 			<a><sup>2</sup>Nvidia</a> &nbsp;&nbsp;&nbsp;&nbsp;
 			<a><sup>3</sup>Google Brain</a><br>
 			<br>
-			<a href="https://arxiv.org/abs/2202.01771"><b>NeurIPS 2022</b></a> &nbsp;&nbsp;&nbsp;&nbsp;
+			<a href="https://arxiv.org/abs/2202.01771"><b>NeurIPS 2022 (Oral)</b></a> &nbsp;&nbsp;&nbsp;&nbsp;
 			<a href="https://github.com/ShuangLI59/Language-Model-Pre-training-Improves-Generalization-in-Policy-Learning"><b>Github</b></a><br>
 
 			<!-- <a href="https://www.csail.mit.edu/"><b><sup>1</sup>MIT CSAIL</b></a><br> -->
