--- a/index.html
+++ b/index.html
@@ -110,11 +110,11 @@
 			<a href="">Tao Chen<sup>1</sup></a> &nbsp;&nbsp;&nbsp;
 			<a href="">De-An Huang<sup>2</sup></a> &nbsp;&nbsp;&nbsp;
 			<a href="https://www.ekinakyurek.me/">Ekin Akyürek<sup>1</sup></a> &nbsp;&nbsp;&nbsp;
-			<a href="">Anima Anandkumar&dagger;<sup>2</sup></a> &nbsp;&nbsp;&nbsp; <br>
+			<a href="">Anima Anandkumar&dagger;<sup>2,3</sup></a> &nbsp;&nbsp;&nbsp; <br>
 			<a href="https://www.mit.edu/~jda/">Jacob Andreas&dagger;<sup>1</sup></a> &nbsp;&nbsp;&nbsp;
-			<a href="https://scholar.google.com/citations?user=Vzr1RukAAAAJ&hl=en">Igor Mordatch&dagger;<sup>3</sup></a> &nbsp;&nbsp;&nbsp;
+			<a href="https://scholar.google.com/citations?user=Vzr1RukAAAAJ&hl=en">Igor Mordatch&dagger;<sup>4</sup></a> &nbsp;&nbsp;&nbsp;
 			<a href="http://web.mit.edu/torralba/www/">Antonio Torralba&dagger;<sup>1</sup></a> &nbsp;&nbsp;&nbsp;
-			<a href="">Yuke Zhu&dagger;<sup>2</sup></a> &nbsp;&nbsp;&nbsp; <br>
+			<a href="">Yuke Zhu&dagger;<sup>2,5</sup></a> &nbsp;&nbsp;&nbsp; <br>
 			<br>
 			<b>Junior authors are ordered based on their contributions and senior authors&dagger; are ordered alphabetically</b>
 			<br>
@@ -122,7 +122,9 @@
 			<!-- <br> -->
 			<a><sup>1</sup>MIT CSAIL</a> &nbsp;&nbsp;&nbsp;&nbsp;
 			<a><sup>2</sup>Nvidia</a> &nbsp;&nbsp;&nbsp;&nbsp;
-			<a><sup>3</sup>Google Brain</a><br>
+			<a><sup>3</sup>Caltech</a> &nbsp;&nbsp;&nbsp;&nbsp;
+			<a><sup>4</sup>Google Brain</a> &nbsp;&nbsp;&nbsp;&nbsp;
+			<a><sup>5</sup>UT Austin</a><br>
 			<br>
 			<a href="https://arxiv.org/abs/2202.01771"><b>NeurIPS 2022 (Oral)</b></a> &nbsp;&nbsp;&nbsp;&nbsp;
 			<a href="https://github.com/ShuangLI59/Language-Model-Pre-training-Improves-Generalization-in-Policy-Learning"><b>Github</b></a><br>
