--- a/index.html
+++ b/index.html
@@ -214,12 +214,12 @@
 		<br>
 
 		<b>Qualitative results of our model on VirtualHome and BabyAI.</b> We only show a sub-trajectory in each example to save space. The interacted objects are labelled by green bounding boxes.
-		<img class="img-responsive img-rounded" src="imgs_new/qualitative3.png" style="width:100%; height:100%" alt="">
+		<img class="img-responsive img-rounded" src="imgs_new/qualitative3-small.jpg" style="width:100%; height:100%" alt="">
 
 		<br><br>
 		
 		<b>Failure cases.</b> We show failure cases caused by the grounding error and policy error. We only show a sub-trajectory in each example and omit most exploration actions to save space. The interacted objects are labelled by green bounding boxes.
-		<img class="img-responsive img-rounded" src="imgs_new/qualitative4.png" style="width:100%; height:100%" alt="">
+		<img class="img-responsive img-rounded" src="imgs_new/qualitative4-small.jpg" style="width:100%; height:100%" alt="">
 
 	</div>
 
