--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
 				Pre-Trained Language Models for Interactive Decision-Making
 			</h2><br>
 
-			<a href="https://people.csail.mit.edu/lishuang/">Shuang Li<sup>1</sup></a> &nbsp;&nbsp;&nbsp;
+			<a href="https://shuangli59.github.io/">Shuang Li<sup>1</sup></a> &nbsp;&nbsp;&nbsp;
 			<a href="https://people.csail.mit.edu/xavierpuig/">Xavier Puig<sup>1</sup></a> &nbsp;&nbsp;&nbsp;
 			<a href="">Chris Paxton<sup>2</sup></a> &nbsp;&nbsp;&nbsp;
 			<a href="https://yilundu.github.io/">Yilun Du<sup>1</sup></a> &nbsp;&nbsp;&nbsp;
@@ -177,7 +177,7 @@
 
 		<div class="row">
 			<div class="col-md-12">
-			<a href="https://people.csail.mit.edu/lishuang/">Shuang Li</a>&nbsp;&nbsp;
+			<a href="https://shuangli59.github.io/">Shuang Li</a>&nbsp;&nbsp;
 			<a href="https://people.csail.mit.edu/xavierpuig/">Xavier Puig</a>&nbsp;&nbsp;
 			<a href="https://cpaxton.github.io">Chris Paxton</a>&nbsp;&nbsp;
 			<a href="https://yilundu.github.io/">Yilun Du</a>&nbsp;&nbsp;
